<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paging"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ui.paging.PagingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMsgs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
