...
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPgp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tVName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?attr/itemTitleColor"
            android:textSize="@dimen/default_text_size_big"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVName"
            tools:text="denbond7@gmail.com" />

        <TextView
            android:id="@+id/tVOnlyEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:layout_marginBottom="@dimen/default_margin_content_small"
            android:ellipsize="end"
            android:maxLines="1"
...
